# circuit-editor

./: .gitignore  CLAUDE.md  PROJECT_SPEC.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/core/commands/: AddComponentCommand.ts  AddWireCommand.ts  Command.ts  CompositeCommand.ts  DeleteComponentCommand.ts  EditPropertyCommand.ts  LabelCommands.ts  MoveComponentCommand.ts  ResetWireRouteCommand.ts  RotateComponentCommand.ts  ScaleComponentCommand.ts
src/core/history/: HistoryManager.ts
src/core/labels/: PartNumbering.ts
src/core/model/: Circuit.ts  PartDefinitions.ts  geometry.ts  types.ts  wireResolution.ts
src/core/serialization/: CircuitSerializer.ts
src/core/templates/: templates.ts
src/core/testgen/: BulkChange.ts  RandomValueGenerator.ts  VariationGenerator.ts
src/export/: PdfExportRenderer.ts  SvgExportRenderer.ts
src/platform/: PlatformAdapter.ts  TauriAdapter.ts
src/store/: useCircuitStore.ts
src/ui/canvas/: CircuitCanvas.tsx  PartSymbol.tsx
src/ui/controls/: NumberScrubInput.tsx
src/ui/layout/: Toolbar.tsx
src/ui/panels/: LeftPanel.tsx  RightPanel.tsx  TemplateGallery.tsx  TestGenPanel.tsx
